# metal-cpp-cmake

./: CMakeLists.txt  README.md
src/: add.metal  main.cpp  metal_adder.cpp  metal_adder.hpp
